--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -61,7 +61,7 @@
     {{!--form for user LOGIN input --}}
     <form class="login-form space-y-10 sm:ml-24 md:ml-36 xl:ml-36 ml-24 pt-10">
       <div>
-        <H6 class="pacifico text-sm text-dark-blue pb-3">email</H6>
+        <H6 class="pacifico text-sm text-dark-blue pb-3">Email</H6>
         <br>
         <label for="email-login"></label>
         <input
@@ -69,7 +69,7 @@
           type="text" id="email-login" />
       </div>
       <div>
-        <H6 class="pacifico text-sm text-dark-blue pb-3">password</H6>
+        <H6 class="pacifico text-sm text-dark-blue pb-3">Password</H6>
         <label for="password-login"></label>
         <input
           class="shadow-sm border-b-2 border-blue rounded-sm focus:outline-none focus:ring-2 focus:ring-blue focus:ring-opacity-50 rounded-lg w-48 sm:w-76 md:w-96"
@@ -78,7 +78,7 @@
       <div>
         <button
           class="pacifico text-dark-blue bg-blue-light text-sm p-1.5 my-2 hover:bg-blue focus:outline-none focus:ring-2 focus:ring-blue focus:ring-opacity-50 rounded-lg"
-          type="submit">login</button>
+          type="submit">Login</button>
       </div>
     </form>
 
