--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -35,7 +35,7 @@
 
         <div class="inset-x-0 lg:p-10">
             {{!-- this is where text will go about the app --}}
-            <h1 class="md:pl-10  text-2xl text-center text-blue-light mt-16">Keep your fridge contents up to date!</h1>
+            <h1 class="md:pl-10 px-5 text-2xl text-center text-blue-light mt-16">Keep your fridge contents up to date!</h1>
             <p class="text-center p-5 text-sm text-blue-light">Welcome to Fridge Friend! Your reliable pal
                 that will
                 not only help you keep track of the items in your fridge, but also hit you up when things
@@ -64,14 +64,14 @@
             </div>
 
             <div>
-                <H6 class="pacifico text-sm text-dark-blue pb-3">email</H6>
+                <H6 class="pacifico text-sm text-dark-blue pb-3">Email</H6>
                 <label for="email-signup"></label>
                 <input
                     class="shadow-sm border-b-2 border-blue rounded-sm focus:outline-none focus:ring-2 focus:ring-blue focus:ring-opacity-50 rounded-lg w-48 sm:w-76 md:w-96"
                     type="email" id="email-signup" />
             </div>
             <div>
-                <H6 class="pacifico text-sm text-dark-blue pb-3">password</H6>
+                <H6 class="pacifico text-sm text-dark-blue pb-3">Password</H6>
                 <label for="password-signup"></label>
                 <input
                     class="shadow-sm border-b-2 border-blue rounded-sm focus:outline-none focus:ring-2 focus:ring-blue focus:ring-opacity-50 rounded-lg w-48 sm:w-76 md:w-96"
@@ -80,7 +80,7 @@
             <div>
                 <button
                     class="pacifico text-blue-light bg-dark-blue text-sm p-1.5 mt-2 hover:bg-blue focus:outline-none focus:ring-2 focus:ring-blue focus:ring-opacity-50 rounded-lg"
-                    type="submit">sign in</button>
+                    type="submit">Sign Up</button>
             </div>
         </form>
 
