--- a/notifications/expired-email.ejs
+++ b/notifications/expired-email.ejs
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 </head>
 <body>
-    <h1>Hello, User!</h1>
-    <p>Oh no, it looks like some of your fridge items have expired! Please check
-        your fridge to clear out any of the expired items. 
+    <h1>Hello, <%= item.user.username %>!</h1>
+    <p>Oh no, it looks like <%= item.item_name %> has expired! Please check
+        your fridge to clear out any expired items. 
     </p>
     <p>Regards,<br>
         The Fridge Friend Team
