--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,12 +17,11 @@
 
 <body>
 
-    <main {{!-- class="bg-grey-lightest font-sans leading-normal tracking-normal" --}}>
+    <main>
         {{{ body }}}
     </main>
 
     <!--Toast Alert -->
-
     <div class="hidden alert-toast fixed bottom-0 right-0 m-8 w-5/6 md:w-full max-w-sm" id="alert-toast">
         <input type="checkbox" class="hidden" id="footertoast">
         <label
@@ -34,7 +33,6 @@
                 <path
                     d="M14.53 4.53l-1.06-1.06L9 7.94 4.53 3.47 3.47 4.53 7.94 9l-4.47 4.47 1.06 1.06L9 10.06l4.47 4.47 1.06-1.06L10.06 9z">
                 </path>
-
             </svg>
         </label>
     </div>
