--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,6 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Open+Sans:wght@300&family=Pacifico&display=swap"
         rel="stylesheet">
+        {{!-- comment here --}}
 </head>
 
 <body>
