--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -101,7 +101,7 @@
                 <div class="absolute inset-0 bg-dark-blue opacity-50"></div>
             </div>
             <!-- This element is to trick the browser into centering the modal contents. -->
-            <span class="hidden sm:inline-block sm:align-middle sm:h-screen" aria-hidden="true">&#8203;</span>
+            <span class="hidden sm:inline-block lg:align-middle lg:h-screen" aria-hidden="true">&#8203;</span>
             <div class="inline-block align-bottom bg-pink rounded-lg text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full"
                 role="dialog" aria-modal="true" aria-labelledby="modal-headline">
                 <div class="bg-pink px-4 pt-5 pb-4 sm:p-6 sm:pb-4">
