--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -26,7 +26,7 @@
     <div class="hidden alert-toast fixed bottom-0 right-0 m-8 w-5/6 md:w-full max-w-sm" id="alert-toast">
         <input type="checkbox" class="hidden" id="footertoast">
         <label
-            class="close cursor-pointer flex items-center justify-between w-full p-2 bg-red-500 h-14 rounded shadow-lg text-white"
+            class="close cursor-pointer flex items-center justify-between w-full p-2 bg-red h-14 rounded shadow-lg text-white"
             title="close" for="footertoast">
             <span><i class="fas fa-bell mx-3"></i><b class="mr-2">Alert!</b><span id="toast-content">content of the alert</span></span>
             <svg class="fill-current text-white" xmlns="http://www.w3.org/2000/svg" width="18" height="18"
