favicon added and lookin good

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/stylesheets/production_style.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css" integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous" />
     <link rel="stylesheet" href="/stylesheets/style.css" />
-    <link rel="icon" type="image/png" href="/images/fridge.png" />
+    <link rel="icon" type="fridge.svg" href="/images/fridge.svg" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Open+Sans:wght@300&family=Pacifico&display=swap"
         rel="stylesheet">
