--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -96,7 +96,7 @@
     {{!--Modal--}}
     <!-- This example requires Tailwind CSS v2.0+ -->
     <div class="fixed z-10 inset-0 overflow-y-auto hidden" id="modal">
-        <div class="flex items-end justify-center min-h-screen pt-4 px-4 pb-20 text-center sm:block sm:p-0">
+        <div class="flex items-end justify-center min-h-screen pt-4 px-4 pb-20 text-center lg:block sm:flow-root sm:m-10 sm:mx-2 sm:p-4 lg:p-0">
             <div class="fixed inset-0 transition-opacity" aria-hidden="true">
                 <div class="absolute inset-0 bg-dark-blue opacity-50"></div>
             </div>
