added value to add-item input to fix mobile bug

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -122,7 +122,7 @@
                                         <label for="qty" class="text-dark-blue pacifico">Qty:</label>
                                         <button type="button" id="minusBtn"><i class="fas fa-minus"></i></button>
                                         <input class="quantity rounded-lg bg-blue-light" min="1" name="new_quantity"
-                                            value="" type="number" />
+                                            value="1" type="number" />
                                         <button type="button" id="plusBtn"><i class="fas fa-plus"></i></button>
                                     </div>
                                     <div>
