changed a few things

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -59,7 +59,7 @@
       <h1 class="text-5xl text-center text-dark-blue">Fridge Friend</h1>
     </div>
     {{!--form for user LOGIN input --}}
-    <form class="login-form space-y-10 sm:ml-24 md:ml-36 xl:ml-36 ml-24 pt-10">
+    <form class="login-form space-y-10 sm:ml-24 md:ml-48 lg:ml-24 xl:ml-36 pt-10">
       <div>
         <H6 class="pacifico text-sm text-dark-blue pb-3">Email</H6>
         <br>
