--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -54,9 +54,9 @@
             <h1 class="text-5xl text-center text-dark-blue">Fridge Friend</h1>
         </div>
         {{!--form for user SIGNIN input --}}
-        <form class="signup-form space-y-10 sm:ml-24 md:ml-36 xl:ml-36 ml-24 pt-10">
+        <form class="signup-form space-y-10 sm:ml-24 md:ml-48 lg:ml-24 xl:ml-36 pt-10">
             <div>
-                <H6 class="pacifico text-sm text-dark-blue pb-3">username</H6>
+                <H6 class="pacifico text-sm text-dark-blue pb-3">Username</H6>
                 <label for="username-signup"></label>
                 <input
                     class="shadow-sm border-b-2 border-blue rounded-sm focus:outline-none focus:ring-2 focus:ring-blue focus:ring-opacity-50 rounded-lg w-48 sm:w-76 md:w-96"
