--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -82,7 +82,7 @@
 
     </div>
     {{!-- Main Content --}}
-    <div class="md:w-3/4 md:h-screen w-screen bg-white">
+    <div class="md:w-3/4 md:h-screen w-screen bg-white overflow-auto">
         {{!-- Welcome Message Container --}}
         <div class="container mt-3 mx-auto px-4">
             {{#if inventories}}
