--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -45,7 +45,7 @@
       <h1 class="md:pl-10 px-5 text-2xl text-center text-dark-blue mt-16">Keep your fridge contents up to date!</h1>
       <p class="text-center p-5 text-sm text-dark-blue">Welcome to Fridge Friend! Your reliable pal that will
         not only help you keep track of the items in your fridge, but also hit you up when things
-        are about to go expire! As your friend, we are dedicated to helping you reduce waste, and make the most out of
+        are about to expire! As your friend, we are dedicated to helping you reduce waste, and make the most out of
         the food in your fridge by giving you the ability to add items, adjust items, and
         get rid of items.
       </p>
