--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -39,7 +39,7 @@
             <p class="text-center p-5 text-sm text-blue-light">Welcome to Fridge Friend! Your reliable pal
                 that will
                 not only help you keep track of the items in your fridge, but also hit you up when things
-                are about to go expire! As your friend, we are dedicated to helping you reduce waste, and make the most
+                are about to expire! As your friend, we are dedicated to helping you reduce waste, and make the most
                 out of
                 the food in your fridge by giving you the ability to add items, adjust items, and
                 get rid of items.
